[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://sprites/background2.png" type="Texture" id=3]
[ext_resource path="res://sprites/player.png" type="Texture" id=4]
[ext_resource path="res://sprites/helix1.png" type="Texture" id=5]
[ext_resource path="res://sprites/helix2.png" type="Texture" id=6]
[ext_resource path="res://sprites/helix3.png" type="Texture" id=7]
[ext_resource path="res://sounds/fx/player.smp" type="Sample" id=8]
[ext_resource path="res://fonts/kelt.fnt" type="BitmapFont" id=9]
[ext_resource path="res://sprites/playUP.png" type="Texture" id=10]
[ext_resource path="res://sprites/playDOWN.png" type="Texture" id=11]
[ext_resource path="res://sprites/exitUP.png" type="Texture" id=12]
[ext_resource path="res://sprites/exitDOWN.png" type="Texture" id=13]
[ext_resource path="res://sprites/btnsoundUP.png" type="Texture" id=14]
[ext_resource path="res://sprites/btnsoundDOWN.png" type="Texture" id=15]
[ext_resource path="res://scenes/dlg_exitgame.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ], "loop":true, "name":"default", "speed":20.0 } ]

[sub_resource type="SampleLibrary" id=2]

samples/player = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton_play:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -200, 148 ), Vector2( 302, 148 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton_exit:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1024, 324 ), Vector2( 340, 324 ) ] }

[sub_resource type="Animation" id=4]

length = 18.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("plane:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 8, 9, 18 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( -84.0999, 133.823 ), Vector2( 1062.61, 101.902 ), Vector2( 1066.99, 294.31 ), Vector2( -76.5632, 294.31 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("plane:flip_h")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 8.2, 9, 18 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ false, false, true, true ] }
tracks/2/type = "value"
tracks/2/path = NodePath("plane/AnimatedSprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 8.2, 9, 17.9 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 49.646, -0.491165 ), Vector2( 49.646, -0.491165 ), Vector2( -48.8143, -0.0155182 ), Vector2( -48.0355, 0.158041 ) ] }

[node name="mainmenu" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 980.0
margin/bottom = 480.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="city" type="Sprite" parent="."]

visibility/opacity = 0.5
transform/pos = Vector2( 488.64, 376.916 )
texture = ExtResource( 3 )

[node name="plane" type="Sprite" parent="."]

transform/pos = Vector2( -84.0999, 133.823 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="plane"]

transform/pos = Vector2( 49.646, -0.491165 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true
offset = Vector2( -0.0760803, 0.429932 )

[node name="SamplePlayer2D" type="SamplePlayer" parent="plane"]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Label_title" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.8, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 235.0
margin/top = 18.0
margin/right = -369.0
margin/bottom = 159.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0.226563, 1, 1 )
text = "SKY ACE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton_play" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 58.0
margin/top = 148.0
margin/right = -96.0
margin/bottom = 302.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/scale = Vector2( 0.6, 0.6 )

[node name="TextureButton_exit" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 324.0
margin/right = -70.0
margin/bottom = 414.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
params/scale = Vector2( 0.35, 0.35 )

[node name="TextureButton_sound" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 2.0
margin/right = 4.0
margin/bottom = 66.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )

[node name="dlg_exitgame" parent="." instance=ExtResource( 16 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 164.0
margin/top = 147.0
margin/right = -348.0
margin/bottom = 495.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/buttons = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "buttons"

[node name="AnimationPlayer_plane" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 4 )
"next/New Anim" = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "New Anim"

[connection signal="button_down" from="TextureButton_play" to="." method="_on_TextureButton_play_button_down"]

[connection signal="button_down" from="TextureButton_exit" to="." method="_on_TextureButton_exit_button_down"]

[connection signal="button_down" from="TextureButton_sound" to="." method="_on_TextureButton_sound_button_down"]


